@@ -26,12 +26,13 @@
  *
  */
 
-package com.primix.vlib.ejb;
+package com.primix.vlib.ejb.impl;
 
 import javax.ejb.*;
 import java.rmi.*;
 import java.util.*;
 import com.primix.tapestry.util.ejb.*;
+import com.primix.vlib.ejb.*;
 
 /**
  *  Implementation of the Publisher entity.
